@@ -1,5 +1,9 @@
 [b]Version 0.6.0rc3[/b] (not released yet):
 
+(2008-03-01)
+ * Try to keep fullscreen mode if running mplayer in its own window when
+   opening a new file.
+
 (2008-02-29)
  * Added the Macedonian translation by Marko Doda <mark0d0da@gmail.com>
  * Added the Basque translation by Piarres Beobide <pi@beobide.net>
